# file-editor

./: .gitignore  .pre-commit-config.yaml  LICENSE  PUBLISH.md  PYPI_PUBLISHING_GUIDE.md  README.md  artifact.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  dependency-update.yml  release.yml
examples/: agent_integration.py  basic_usage.py
src/file_editor/: __init__.py
src/file_editor/agent/: __init__.py  interface.py
src/file_editor/core/: __init__.py  mmap_editor.py  safety.py  seek_editor.py  stream_editor.py
src/file_editor/formats/: __init__.py  csv.py  markdown.py  text.py
tests/: test_agent_interface.py  test_basic_functionality.py  test_core_mmap.py  test_core_safety.py  test_core_stream.py  test_formats.py
