[project]
name = "file-editor"
version = "0.1.0"
description = "Memory-efficient partial file editing library for Python with agent-friendly API"
readme = "README.md"
authors = [
    { name = "rwxproject", email = "rwxproject@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "filelock>=3.12.0",
]

[project.optional-dependencies]
pandas = ["pandas>=2.0.0"]
hdf5 = ["h5py>=3.9.0"]
all = ["file-editor[pandas,hdf5]"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pytest-benchmark>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
